--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>                                                         <!-- Translators, pay attention to these notes! --> 
-    <string name="app_name">UserLAnd</string>
-    <string name="welcome">Welcome to UserLAnd!</string>
+    <string name="app_name">MathLand</string>
+    <string name="welcome">Welcome to MathLand!</string>
     <string name="permission_request_code">1000</string>
 
     <!-- Labels -->
@@ -81,7 +81,7 @@
         %1$s \nWe are working to resolve these issues. You can let us know about this issue on
         Github if you\'d like to help!
     </string>
-    <string name="illegal_state_title">UserLAnd has entered an illegal state!</string>
+    <string name="illegal_state_title">MathLand has entered an illegal state!</string>
 
     <string name="illegal_state_transition">Bad state transition: %1$s</string>
 
@@ -124,8 +124,8 @@
     <!-- Notification strings -->
     <string name="services_notification_channel_name">Services</string>
     <string name="services_notification_channel_description">Persistent services</string>
-    <string name="service_notification_title">UserLAnd</string>
-    <string name="service_notification_description">UserLAnd is running a background service.</string>
+    <string name="service_notification_title">MathLand</string>
+    <string name="service_notification_description">MathLand is running a background service.</string>
 
     <!-- Progress bar messages -->
     <string name="progress_start_step">Getting things ready for you&#8230;</string>
@@ -207,8 +207,8 @@
     <string name="alert_need_client_app_message">You\'ll need an SSH or VNC or XSDL client to complete this action, but it looks like you don\'t have the play store installed. \n\nPlease install the client application (SSH/VNC/XSDL) associated with the session\'s client type to continue.</string>
 
     <!-- Permissions necessary alert -->
-    <string name="alert_permissions_necessary_title">UserLAnd requires permissions!</string>
-    <string name="alert_permissions_necessary_message">To continue, enable storage permissions to allow UserLAnd to download files and move them from external storage to app local storage.</string>
+    <string name="alert_permissions_necessary_title">MathLand requires permissions!</string>
+    <string name="alert_permissions_necessary_message">To continue, enable storage permissions to allow MathLand to download files and move them from external storage to app local storage.</string>
     <string name="alert_permissions_necessary_cancel_button">Cancel</string>
 
     <!-- Network unavailable alert -->
@@ -216,7 +216,7 @@
 
     <!-- Storage capacity low alert -->
     <string name="alert_storage_low_title">Low storage capacity</string>
-    <string name="alert_storage_low_message">To ensure smooth functionality of a filesystem in UserLAnd, ensure there is at least 1 GB of free space.</string>
+    <string name="alert_storage_low_message">To ensure smooth functionality of a filesystem in MathLand, ensure there is at least 1 GB of free space.</string>
 
     <!-- Wifi alert -->
     <string name="alert_wifi_disabled_title">No wifi!</string>
@@ -228,7 +228,7 @@
     <!-- Toasts -->
     <string name="session_unique_name_required">Sessions require a unique name!</string>
     <string name="filesystem_unique_name_required">Filesystems require a unique name!</string>
-    <string name="single_session_supported">UserLAnd currently only supports a single active session!</string>
+    <string name="single_session_supported">MathLand currently only supports a single active session!</string>
     <string name="debug_log_export_success">Debug log exported successfully!</string>
     <string name="debug_log_export_failure">Exporting debug log failed!</string>
     <string name="debug_log_deleted">Debug log deleted!</string>
@@ -249,12 +249,12 @@
     <string name="no_backup_selected">No filesystem import selected</string>
     
     <!-- Review request -->
-    <string name="review_is_user_enjoying">Enjoying UserLAnd?</string>
+    <string name="review_is_user_enjoying">Enjoying MathLand?</string>
     <string name="review_ask_for_rating">How about a rating on the Play Store, then?</string>
     <string name="review_ask_for_feedback">Would you mind giving us some feedback on Github?</string>
 
     <!-- Contribution request -->
-    <string name="contribution_primary">Can you help support UserLAnd development?</string>
+    <string name="contribution_primary">Can you help support MathLand development?</string>
     <string name="contribution_secondary_positive">How much can you contribute?</string>
     <string name="contribution_secondary_negative">Do you want to see other ways you can help the project?</string>
     <string name="contribution_frequency">How often?</string>
@@ -265,8 +265,8 @@
 
     <!-- Error collection opt-in -->
     <string name="opt_in_preference">Opt-in to error reporting</string>
-    <string name="opt_in_preference_summary">Allow us to collect error reports to improve UserLAnd.</string>
-    <string name="opt_in_help_prompt">Would you like to help UserLAnd become more stable by sending us error reports?</string>
+    <string name="opt_in_preference_summary">Allow us to collect error reports to improve MathLand.</string>
+    <string name="opt_in_help_prompt">Would you like to help MathLand become more stable by sending us error reports?</string>
     <string name="opt_in_error_collection_prompt">Opt-in to error log collection service?</string>
     <string name="opt_in_secondary_prompt">Are you sure? You can change this setting later in the settings page.</string>
     <string name="opt_in_secondary_pos_btn">OK, I will opt-in.</string>
@@ -275,7 +275,7 @@
     <string name="q_warning_title">File access has changed!</string>
     <string name="q_warning_message">
         The next version of Android, Q, is making improvements to security which affect our app and
-        how our users are able to get files in and out of UserLAnd filesystems. In order to comply
+        how our users are able to get files in and out of MathLand filesystems. In order to comply
         with these changes, using \"/sdcard\" to move files in and out will no longer behave as it used
         to. Please visit our wiki on our Github to learn more.
     </string>
