--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">UserLAnd</string>
+    <string name="app_name">MathLand</string>
     <string name="apps">应用程序</string>
     <string name="sessions">会话</string>
     <string name="edit_session">编辑会话</string>
@@ -20,7 +20,7 @@
     <string name="refresh">刷新</string>
     <string name="clear_support_files">清除支持的文件</string>
     <string name="hint_filesystem_name">文件系统名</string>
-    <string name="welcome">欢迎使用UserLAnd</string>
+    <string name="welcome">欢迎使用MathLand</string>
     <string name="permission_request_code">1000</string>
     <string name="hint_session_name">会话名</string>
     <string name="hint_username">用户名</string>
@@ -40,8 +40,8 @@
     <string name="prompt_client_type">客户端类别：</string>
     <string name="services_notification_channel_name">服务</string>
     <string name="services_notification_channel_description">永久服务</string>
-    <string name="service_notification_title">UserLAnd</string>
-    <string name="service_notification_description">UserLAnd在后台运行中</string>
+    <string name="service_notification_title">MathLand</string>
+    <string name="service_notification_description">MathLand在后台运行中</string>
     <string name="progress_fetching_asset_lists">正在取得素材列表&#8230;</string>
     <string name="progress_checking_for_required_updates">正在检查更新信息&#8230;</string>
     <string name="progress_downloading">正在下载需要的素材&#8230;</string>
@@ -50,7 +50,7 @@
     <string name="progress_starting">开始服务&#8230;</string>
     <string name="progress_setting_up_filesystem">设置文件系统中&#8230;</string>
     <string name="progress_extraction_details">提取: %1$s</string>
-    <string name="illegal_state_title">UserLAnd发生了一些错误</string>
+    <string name="illegal_state_title">MathLand发生了一些错误</string>
     <string name="illegal_state_transition">这些错误有: %1$s</string>
     <string name="progress_verifying_assets">正在验证下载的资源&#8230;\n很快就会完成。</string>
     <string name="pref_app_category">应用偏好&#8230;</string>
@@ -80,8 +80,8 @@
     <string name="filesystem_credentials_reasoning">我们正在为您的程序创建一个文件系统，请输入相关信息，我们将为您设置成此文件系统的默认信息</string>
     <string name="alert_need_client_app_title">无法找到客户端应用！</string>
     <string name="alert_need_client_app_message">您需要一个SSH 或者VNC客户端来完成这项指令，看起来您并没有装载Google Play商店。 请装载SSH或者VNC客户端.</string>
-    <string name="alert_permissions_necessary_title">UserLAnd需要您的允许！</string>
-    <string name="alert_permissions_necessary_message">请允许UserLAnd下载文件并将它们储存在本地.</string>
+    <string name="alert_permissions_necessary_title">MathLand需要您的允许！</string>
+    <string name="alert_permissions_necessary_message">请允许MathLand下载文件并将它们储存在本地.</string>
     <string name="alert_permissions_necessary_cancel_button">取消</string>
     <string name="alert_network_required_for_refresh">刷新程序需要更好的网络连接强度</string>
     <string name="alert_wifi_disabled_title">没有无线网络!</string>
@@ -91,7 +91,7 @@
     <string name="alert_wifi_disabled_cancel_button">取消</string>
     <string name="session_unique_name_required">此会话需要一个特殊的名字！</string>
     <string name="filesystem_unique_name_required">文件系统需要一个特殊的名字！</string>
-    <string name="single_session_supported">UserLAnd目前仅支持一个会话！</string>
+    <string name="single_session_supported">MathLand目前仅支持一个会话！</string>
     <string name="debug_log_deleted">除错日志已被删除或者不存在！</string>
     <string name="desc_arrow">图像：箭头指示会话与文件系统之间的关系</string>
     <string name="desc_filesystem_type">图像：分发图标</string>
@@ -106,9 +106,9 @@
     </string>
     <string name="info_xsdl_support">Android 9.0及更高版本尚不完全支持XSDL</string>
     <string name="alert_clear_support_files_clear_button">清除</string>
-    <string name="review_is_user_enjoying">正在享受 UserLAnd吗？</string>
+    <string name="review_is_user_enjoying">正在享受 MathLand吗？</string>
     <string name="review_ask_for_rating">可以在 Play商店上为我们评分吗？</string>
     <string name="review_ask_for_feedback">您介意在GitHub上给我们一些反馈吗？</string>
     <string name="q_warning_title">文件访问权限已更改!</string>
-   <string name="q_warning_message">Android Q的下一个版本的正在改进安全性，会影响我们的应用程序以及用户如何从UserLAnd上的文件系统中获取文件。为了遵守这些更改，将sdcard内的文件移入和移出将不再像过去那样。请访问我们的Github上的Wiki了解更多信息.</string>
+   <string name="q_warning_message">Android Q的下一个版本的正在改进安全性，会影响我们的应用程序以及用户如何从MathLand上的文件系统中获取文件。为了遵守这些更改，将sdcard内的文件移入和移出将不再像过去那样。请访问我们的Github上的Wiki了解更多信息.</string>
 </resources>
