--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">UserLAnd</string>
-    <string name="welcome">Benvingut a UserLAnd!</string>
+    <string name="app_name">MathLand</string>
+    <string name="welcome">Benvingut a MathLand!</string>
     <string name="permission_request_code">1000</string>
 
     <!-- Labels -->
